# Django_Phone_Token

./: pyproject.toml
main/: .env_example  settings.py  urls.py
users/: admin.py  forms.py  managers.py  models.py  sendler.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/tests/: tests_managers.py  tests_models.py  tests_sendler.py
